DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: rh-openshift-dc
  labels:
    app: rh_openshift  
spec:
  replicas: 5
  selector:
    app: rh_openshift
    deploymentconfig: rh-openshift-dc
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: rh_openshift
        deploymentconfig: rh-openshift-dc
    spec:
      containers:
      - image: is_rhos_demo:latest
        imagePullPolicy: Always
        name: cont-rhos-demo
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      imagePullSecrets:
          - name: arvind-secret-key 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - cont-rhos-demo
      from:
        kind: ImageStreamTag
        name: is_rhos_demo:latest
    type: ImageChange
