Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-rh-openshift
  labels:
    app: rh_openshift
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: rh_openshift
    deploymentconfig: rh-openshift-dc
  sessionAffinity: None
  type: ClusterIP
