Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-openshift
spec:
  to:
    kind: Service
    name: svc-rh-openshift
